# pydantic-ai-production-ready-template

./: .coveragerc  .cursorignore  .env.example  .pre-commit-config.yaml  Dockerfile  MONITORING.md  Makefile  README.md  ci.env  docker-compose.dev.yml  docker-compose.yml  noxfile.py  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20251125_0247_b9d2d9166639_initial_migration.py  20251128_2148_17e931a93b99_add_prompts_and_prompt_versions_tables.py  20251128_2253_6cd626c1fa33_update_prompt_model_add_content_remove_.py  20251129_0013_0afa4e016142_initial_migration.py
evals/evaluators/: __init__.py  spans_evaluators.py
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/dashboards/json/: container_monitoring.json
grafana/provisioning/datasources/: datasources.yml
litellm/: litellm.yaml
prometheus/: prometheus.yml
src/: cli.py  main.py
src/admin/: __init__.py
src/admin/views/: __init__.py  environment_variables.py  prompt_versioning_control.py  users.py
src/api/v1/: __init__.py  auth.py  health.py
src/core/: config.py  limiter.py  security.py
src/core/agentic_system/: utils.py
src/core/agentic_system/agents/: main_agent.py  rag_agent.py
src/database/: __init__.py  database.py  redis.py
src/models/: __init__.py  message.py  prompt.py  thread.py  user.py
src/schemas/: __init__.py  extras.py  user.py
src/services/: auth_service.py  prompt_service.py  user_service.py
templates/: base.html  env_settings.html  layout.html  login.html  prompt_editor.html
tests/: conftest.py  test_auth.py  test_auth_service.py  test_cli.py  test_config.py  test_health.py  test_prompt_service.py  test_schemas.py  test_security.py  test_user_service.py
